--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -59,6 +59,17 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
+                        Shares & Bonds
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" th:href="@{/security}">Add Security</a>
+<!--                        <a class="dropdown-item" th:href="@{/coin/collection}">Colection</a>-->
+<!--                        <a class="dropdown-item" th:href="@{/coin/newCoins}">New Coins</a>-->
+<!--                        <a class="dropdown-item" th:href="@{/coin/forSell}"> Coin For Sell</a>-->
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
                         Customer
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
