Dodano wyswietlanie rodzaju walut w Security poprawka sql do wyświetlania walyt w security

--- a/src/main/resources/static/css/my_style.css
+++ b/src/main/resources/static/css/my_style.css
@@ -48,6 +48,11 @@ body
     background: #53b2ff87;
 }
 
+.SECURITY
+{
+    background: #f90b0b57;
+}
+
 /**************************MODAL CONFIRM DELETE**************************
 
 /* Float cancel and delete buttons and add an equal width */
