--- a/src/main/resources/templates/security/index.html
+++ b/src/main/resources/templates/security/index.html
@@ -21,10 +21,10 @@
                     <Block th:each="country : ${countries}">
                         <div class="col-sm-2" style="width: 170px">
                             <div calss="container" style="margin: 15px; width: 160px">
-<!--                                <a th:href="@{'/security/currency/' + ${country.countryEn}}">-->
+                                <a th:href="@{'/security/currency/' + ${country.countryEn}}">
                                     <img th:src="@{'/images/flags/' + ${country.countryEn} + '.png'}" style="width: 80px; max-height: 60px"/><br>
                                     <span th:text="${country.countryEn}" style="font-size: small; display: flex"></span>
-<!--                                </a>-->
+                                </a>
                             </div>
                         </div>
                     </Block>
