--- a/src/main/resources/templates/customer/edit.html
+++ b/src/main/resources/templates/customer/edit.html
@@ -13,10 +13,10 @@
             <hr class="my-2">
             <form th:action="@{/customer/edit}" method="post" th:object="${customerForm}">
                 <div th:replace="customer/_form :: form"></div>
-<!--                <div class="form-row align-items-center">-->
-<!--                    <input class="form-control form-control-sm mb-2" type="text" th:field="*{id}" placeholder="Unique Id" readonly th:type="hidden" />-->
-<!--                    <input class="form-control form-control-sm mb-2" type="text" th:field="*{created_at}" placeholder="Unique Id" readonly />-->
-<!--                </div>-->
+                <div class="form-row align-items-center">
+                    <input class="form-control form-control-sm mb-2" type="text" th:field="*{id}" placeholder="Unique Id" readonly th:type="hidden" />
+                    <input class="form-control form-control-sm mb-2" type="text" th:field="*{created_at}" placeholder="Unique Id" readonly />
+                </div>
                 <p> <input type="submit" value="Zapis Zmiany" class="btn btn-sm btn-primary"></p>
             </form>
             <div>
