--- a/src/main/resources/templates/coin/coin_list.html
+++ b/src/main/resources/templates/coin/coin_list.html
@@ -4,7 +4,7 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
       layout:decorate="~{layouts/layout}">
 <head>
-    <title>Note Currency</title>
+    <title>Coin Currency</title>
 </head>
 <body>
     <div layout:fragment="content" class="container">
