--- a/src/main/resources/templates/coin/new.html
+++ b/src/main/resources/templates/coin/new.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <div layout:fragment="content" class="container">
-        <h1 style="text-align: center">COIN NEW</h1>
-
-        <form th:action="@{/coin/new}" method="post" th:object="${coinForm}">
-            <div th:replace="coin/_form :: form"></div>
-            <p> <input type="submit" value="Dodaj" class="btn btn-sm btn-primary"></p>
-        </form>
-        <a th:replace="fragments/button/_button-back :: back(back = '/coin/coin_list/?currencySeries=' + ${coinForm.currencies.currencySeries} + '&curId=' + ${coinForm.currencies.id})"></a>
+        <div class="jumbotron">
+            <h1 style="text-align: center">COIN NEW</h1>
+            <hr class="my-2">
+            <form th:action="@{/coin/new}" method="post" th:object="${coinForm}">
+                <div th:replace="coin/_form :: form"></div>
+                <p> <input type="submit" value="Dodaj" class="btn btn-sm btn-primary"></p>
+            </form>
+            <a th:replace="fragments/button/_button-back :: back(back = '/coin/coin_list/?currencySeries=' + ${coinForm.currencies.currencySeries} + '&curId=' + ${coinForm.currencies.id})"></a>
+        </div>
     </div>
 </body>
 </html>
