--- a/src/main/resources/templates/country/index.html
+++ b/src/main/resources/templates/country/index.html
@@ -19,9 +19,9 @@
                 <th>
                     <a th:href="@{'/page/' + ${currentPage} + '?sortField=continents.continentEn&sortDir=' + ${reverseSortDir}}">Con</a>
                 </th>
-                <th>
-                    <a th:href="@{'/page/' + ${currentPage} + '?sortField=continent&sortDir=' + ${reverseSortDir}}">Continent</a>
-                </th>
+<!--                <th>-->
+<!--                    <a th:href="@{'/page/' + ${currentPage} + '?sortField=continent&sortDir=' + ${reverseSortDir}}">Continent</a>-->
+<!--                </th>-->
                 <th>
                     <a th:href="@{'/page/' + ${currentPage} + '?sortField=countryEn&sortDir=' + ${reverseSortDir}}">Country EN</a>
                 </th>
@@ -38,7 +38,7 @@
                     <td th:text="${(i.index + 1) + (pageSize * (currentPage - 1))}"></td>
                     <td th:text="${country.id}" class="pt-1 pb-1"></td>
                     <td th:text="${country.continents.continentPl}" class="pt-1 pb-1"></td>
-                    <td th:text="${country.continent}" class="pt-1 pb-1"></td>
+<!--                    <td th:text="${country.continent}" class="pt-1 pb-1"></td>-->
                     <td th:text="${country.countryEn}" class="pt-1 pb-1"></td>
                     <td th:text="${country.countryPl}" class="pt-1 pb-1"></td>
                     <td th:text="${country.capital_city}" class="pt-1 pb-1"></td>
