--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -15,10 +15,10 @@
         </div>
         <div class="row row-cols-1 row-cols-sm-2">
             <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
-                <img src="https://pehkkw.ch.files.1drv.com/y4muxeaNpoJz-ILuHG-1AwPz2sUN-zN6vmaoPHFwe24M0ZgZ5xrxfU8XxpR7ANJ1Lom-p8XP_bCIeoRib6qacOJzBA1ZOQkX0WlbBNOccJD7V38GjEizFoiqAR1CzqbL_OtiXJmWz5TWjCmQvqMAto6IDPwWpsZNf0xBAfEBC-kwrPqVvVr6DR4um6oROlMjnPwSVUD7xhgtRPOb6pBhZJJ9A/Poland_20_Zlotych_201a_2018.jpg?psid=1" style="max-width: 100%; max-height: 350px"/>
+                <img src="https://dub01pap001files.storage.live.com/y4md3w1qi0YL5yavfhXUFN-NaDSWmpYX8dP-eBdmw0DFcLLvqqroXSozwRBMwyYMXuCz7ysZe0g7xKyCbEbrK-sssY0jYUUSCCHE4k_CwNtyEZbVFW_t9i-86AxZlqTuioEn6irCkrF9GMXA46Mnl_3M8ThY5KdpUQD2x-YtkM6AEXosOITvadBqgRchDOsdJsKfQz9WbG8L3WMya1uqbGpgw?encodeFailures=1&width=1626&height=837" style="max-width: 100%; max-height: 350px"/>
             </div>
             <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
-                <img src="https://pehkkw.ch.files.1drv.com/y4mPUbTFUvHbOBFzyXzwYt9vmStv09xK42uSKR9Yf-WqCius38bsURQs6oUC3Yy_MoNzxlsr6oXrUTm33vcC0NsZW3yxDs84VpdiWwJ4mdC_9cxlEFc_2uS1XqFCautZuLeQ6F_iZjih6rSp_-sqLE19BxKQu61mMgPnTL64VfbvKxKYR71h3ujRfU63e9n0OTt6mAF_nxZPu_5j0ZqQQWCqA/Poland_20_Zlotych_201b_2018.jpg?psid=1" style="max-width: 100%; max-height: 350px"/>
+                <img src="https://dub01pap001files.storage.live.com/y4mznzbXXEnybhO3FJCDeKxCJ5-6RJ3O2njC41JvJIuUqD4lfvgaoawUUhZYfqLci_rkCQEkkTX_728YoQfpjfs9KF3QI1ei_7dWBLyTpyZAs9Rmt7kFpo2-72B71m5xW0wcinWyOe2COKDqAneo0wowJbPl_YTvZ-YV1ZwpL8oQJWp9yV9i6KjEf50Eax7MuvphQ5_41hFOd8BThM6QFVDmA?encodeFailures=1&width=1625&height=837" style="max-width: 100%; max-height: 350px"/>
             </div>
         </div>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
