--- a/src/main/resources/templates/layouts/header.html
+++ b/src/main/resources/templates/layouts/header.html
@@ -91,6 +91,7 @@
                         <a class="dropdown-item" th:href="@{/status}">Status</a>
                         <a class="dropdown-item" th:href="@{/imageType}">Image Type</a>
                         <a class="dropdown-item" th:href="@{/shipping}">Shipping Type</a>
+                        <a class="dropdown-item" th:href="@{/statusOrder}">Status Order</a>
                         <a class="dropdown-item" th:href="@{/chart}">Chart</a>
                     </div>
                 </li>
