--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -35,7 +35,7 @@
                             <td th:text="${customer.city}" class="pt-1 pb-1"></td>
                             <td th:text="${customer.description}" class="pt-1 pb-1"></td>
                             <td class="pt-1 pb-1">
-                                <a th:href="@{'/order'}" class="btn btn-sm btn-info" style="font-size: 10px">Order</a>
+                                <a th:href="@{'/order/' + ${customer.uniqueId}}" class="btn btn-sm btn-info" style="font-size: 10px">Order</a>
                                 <a th:href="@{'/customer/show/' + ${customer.id}}" class="btn btn-sm btn-info" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#customer-' + ${customer.id}" >SHOW</a>
                                 <div class="modal fade" th:attr="id= 'customer-' + ${customer.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                     <div th:replace="customer/_showModal :: showModal"></div>
