--- a/src/main/resources/templates/order/index.html
+++ b/src/main/resources/templates/order/index.html
@@ -13,7 +13,7 @@
             <h1 class="display-4" style="text-align: center">Order</h1>
             <hr class="my-2">
             <span th:text="${customerOrder.customer.uniqueId}"></span>
-<!--            <a th:href="@{'/order/new/' + ${customerOrder.customers.uniqueId}}" class="btn btn-sm btn-primary">Add new Order</a>-->
+            <a th:href="@{'/order/new/' + ${customerOrder.customer.uniqueId}}" class="btn btn-sm btn-primary">Add new Order</a>
             <hr class="my-2">
             <table class="table table-striped table-bordered table-hover table-sm">
                 <thead class="thead-dark">
@@ -27,7 +27,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <Block th:each="order, i : ${orderDtos}">
+                <Block th:each="order, i : ${customerOrder.orders}">
                     <tr>
                         <td th:text="${i.index + 1}" class="pt-1 pb-1"></td>
                         <td th:text="${order.numberOrder}" class="pt-1 pb-1"></td>
