--- a/src/main/resources/templates/order/_showModal.html
+++ b/src/main/resources/templates/order/_showModal.html
@@ -9,11 +9,19 @@
                 </button>
             </div>
             <div class="modal-body" style="background: antiquewhite">
-<!--                <b>Id: </b><span th:text="${order.id}"></span><br>-->
-<!--                <b>Shipping En: </b><span th:text="${shippingType.shippingTypeEn}"></span><br>-->
-<!--                <b>Shipping Pl: </b><span th:text="${shippingType.shippingTypePl}"></span><br>-->
-<!--                <b>Shipping Coast: </b><span th:text="${shippingType.shippingTypePl}"></span><br>-->
-<!--                <b><label>Description:</label></b><br>-->
+                <b>UUID: </b><span th:text="${customerOrder.customer.uniqueId}"></span><br>
+                <b>Name: </b><span th:text="${customerOrder.customer.name}"></span><br>
+                <b>Last Name: </b><span th:text="${customerOrder.customer.lastName}"></span><br>
+                <hr class="my-2">
+                <b>Id: </b><span th:text="${order.id}"></span><br>
+                <div th:class="${order.statusOrders.statusEn}">
+                    <b>Status Order: </b><span th:text="${order.statusOrders.statusPl}"></span><br>
+                </div>
+                <b>Nomber Order: </b><span th:text="${order.numberOrder}"></span><br>
+                <b>Date Ordcer: </b><span th:text="${order.dateOrder}"></span><br>
+                <b>Tracking Number: </b><span th:text="${order.trackingNumber}"></span><br>
+                <b>Shipping Type: </b><span th:text="${order.shippingTypes.shippingTypePl}"></span><br>
+
 <!--                <span th:text="${shippingType.description}"></span>-->
             </div>
             <div class="modal-footer" style="background: lightgray">
