--- a/src/main/resources/templates/order/edit.html
+++ b/src/main/resources/templates/order/edit.html
@@ -4,24 +4,22 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
       layout:decorate="~{layouts/layout}">
 <head>
-    <title>Edit Customer</title>
+    <title>Edit Order</title>
 </head>
 <body>
     <div layout:fragment="content" class="container">
         <div class="jumbotron">
-            <h1 class="display-4" style="text-align: center">Customer NEW</h1>
+            <h1 class="display-4" style="text-align: center">Order Edit</h1>
             <hr class="my-2">
-            <form th:action="@{/customer/edit}" method="post" th:object="${customerForm}">
-                <div th:replace="customer/_form :: form"></div>
+            <form th:action="@{/order/edit}" method="post" th:object="${orderForm}">
+                <div th:replace="order/_form :: form"></div>
+                <input type="submit" value="Zapis Zmiany" class="btn btn-sm btn-primary" style="float: left; margin-right: 5px">
+                <a th:replace="fragments/button/_button-back :: back(back = '/order/' + ${orderForm.customers.uniqueId})"></a>
                 <div class="form-row align-items-center">
                     <input class="form-control form-control-sm mb-2" type="text" th:field="*{id}" placeholder="Unique Id" readonly th:type="hidden" />
-                    <input class="form-control form-control-sm mb-2" type="text" th:field="*{created_at}" placeholder="Unique Id" readonly />
+                    <input class="form-control form-control-sm mb-2" type="text" th:field="*{created_at}" placeholder="Unique Id" readonly th:type="hidden" />
                 </div>
-                <p> <input type="submit" value="Zapis Zmiany" class="btn btn-sm btn-primary"></p>
             </form>
-            <div>
-                <a th:replace="fragments/button/_button-back :: back(back = '/customer')"></a>
-            </div>
         </div>
     </div>
 </body>
