--- a/src/main/resources/templates/order/index.html
+++ b/src/main/resources/templates/order/index.html
@@ -13,13 +13,19 @@
             <h1 class="display-4" style="text-align: center">Order</h1>
             <hr class="my-2">
             <span th:text="${customerOrder.customer.uniqueId}"></span>
-            <a th:href="@{'/order/new/' + ${customerOrder.customer.uniqueId}}" class="btn btn-sm btn-primary">Add new Order</a>
+            <hr class="my-2">
+            <div style="display: inline-flex;">
+                <a th:href="@{'/order/new/' + ${customerOrder.customer.uniqueId}}" class="btn btn-sm btn-primary mr-1" >Add new Order</a>
+                <a th:replace="fragments/button/_button-back :: back(back = '/customer')"></a>
+            </div>
             <hr class="my-2">
             <table class="table table-striped table-bordered table-hover table-sm">
                 <thead class="thead-dark">
                 <tr>
                     <th>Lp:</th>
                     <th>Number Order</th>
+                    <th>Status Order</th>
+                    <th>Date Order</th>
                     <th>Tracking Number</th>
                     <th>Shipping Cost</th>
                     <!--                <th>desctiption</th>-->
@@ -31,6 +37,8 @@
                     <tr>
                         <td th:text="${i.index + 1}" class="pt-1 pb-1"></td>
                         <td th:text="${order.numberOrder}" class="pt-1 pb-1"></td>
+                        <td th:text="${order.statusOrders.statusPl}" th:class="${order.statusOrders.statusEn}" class="pt-1 pb-1"></td>
+                        <td th:text="${order.dateOrder}" class="pt-1 pb-1"></td>
                         <td th:text="${order.trackingNumber}" class="pt-1 pb-1"></td>
                         <td th:text="${#numbers.formatDecimal(order.shippingCost,1,2)} + 'zł'"class="pt-1 pb-1" style="text-align: right"></td>
                         <td class="pt-1 pb-1">
@@ -38,11 +46,11 @@
                             <div class="modal fade" th:attr="id= 'order-' + ${order.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div th:replace="order/_showModal :: showModal"></div>
                             </div>
-<!--                                <a th:href="@{'/shipping/edit/' + ${shippingType.id}}" class="btn btn-sm btn-primary" style="font-size: 10px" >EDIT</a>-->
-<!--                                <a th:href="@{'/shipping/delete/' + ${shippingType.id}}" class="btn btn-sm btn-danger" style="font-size: 10px; float: right" data-toggle="modal" th:attr="data-target='#shipping' + ${shippingType.id}" >Delete</a>-->
-<!--                            <div class="modal fade" th:attr="id= 'shipping' + ${shippingType.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
-<!--                                <div th:replace="seting/shippingType/_confirmDeleteModal :: confirmDeleteModal"></div>-->
-<!--                            </div>-->
+                                <a th:href="@{'/order/edit/' + ${order.id}}" class="btn btn-sm btn-primary" style="font-size: 10px" >EDIT</a>
+                                <a th:href="@{'/order/delete/' + ${order.id}}" class="btn btn-sm btn-danger" style="font-size: 10px; float: right" data-toggle="modal" th:attr="data-target='#order' + ${order.id}" >Delete</a>
+                            <div class="modal fade" th:attr="id= 'order' + ${order.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div th:replace="order/_confirmDeleteModal :: confirmDeleteModal"></div>
+                            </div>
                         </td>
                     </tr>
                 </Block>
