--- a/src/main/resources/templates/order/new.html
+++ b/src/main/resources/templates/order/new.html
@@ -13,10 +13,11 @@
             <hr class="my-2">
             <form th:action="@{/order/new}" method="post" th:object="${orderForm}">
                 <div th:replace="order/_form :: form"></div>
-                <p> <input type="submit" value="Dodaj" class="btn btn-sm btn-primary"></p>
+                <input type="submit" value="Dodaj" class="btn btn-sm btn-primary" style="  float: left; margin-right: 5px">
+                <a th:replace="fragments/button/_button-back :: back(back = '/order/' + ${orderForm.customers.uniqueId})"></a>
             </form>
             <div>
-<!--                <a th:replace="fragments/button/_button-back :: back(back = '/order')"></a>-->
+<!--                <a th:replace="fragments/button/_button-back :: back(back = '/order/' + ${orderForm.customers.uniqueId})"></a>-->
             </div>
         </div>
     </div>
