--- a/src/main/resources/templates/order/_showModal.html
+++ b/src/main/resources/templates/order/_showModal.html
@@ -21,6 +21,9 @@
                 <b>Date Ordcer: </b><span th:text="${order.dateOrder}"></span><br>
                 <b>Tracking Number: </b><span th:text="${order.trackingNumber}"></span><br>
                 <b>Shipping Type: </b><span th:text="${order.shippingTypes.shippingTypePl}"></span><br>
+                <hr class="my-2">
+                <b>Description:</b><br>
+                <span th:text="${order.description}"></span>
 
 <!--                <span th:text="${shippingType.description}"></span>-->
             </div>
