--- a/src/main/resources/templates/orderItem/_noteForSell.html
+++ b/src/main/resources/templates/orderItem/_noteForSell.html
@@ -60,6 +60,7 @@
                             <!--                            <a th:href="@{'/note/show/' + ${note.id}}" class="btn btn-sm btn-info" style="font-size: 10px">SHOW</a>-->
 <!--                            <a th:href="@{'/note/edit/' + ${note.noteId}}" class="btn btn-sm btn-primary" style="font-size: 10px">EDIT</a>-->
                             <!--                            <a th:href="@{'/note/delete/' + ${note.id}}" class="btn btn-sm btn-danger" style="font-size: 10px">DELETE</a>-->
+                            <a th:href="@{'/orderItem/new/?orderId=' + ${orderId} + '&itemId=' + ${note.noteId} + '&pattern=' + ${note.patterns.pattern}}" class="btn btn-sm btn-primary mr-1" >Add</a>
                         </td>
                     </tr>
                 </Block>
