--- a/src/main/resources/templates/orderItem/index.html
+++ b/src/main/resources/templates/orderItem/index.html
@@ -26,10 +26,11 @@
                     <th>Lp:</th>
                     <th>Id:</th>
                     <th>Country</th>
-<!--                    <th>Date Order</th>-->
-<!--                    <th>Tracking Number</th>-->
-<!--                    <th>Shipping Cost</th>-->
-                    <!--                <th>desctiption</th>-->
+                    <th>Currency</th>
+                    <th>Patern</th>
+                    <th>Ilość</th>
+                    <th>Final Price</th>
+                    <th>Total</th>
                     <th>Action</th>
                 </tr>
                 </thead>
@@ -38,11 +39,16 @@
                     <tr>
                         <td th:text="${i.index + 1}" class="pt-1 pb-1"></td>
                         <td th:text="${orderItem.id}" class="pt-1 pb-1"></td>
-                        <td class="pt-1 pb-1"></td>
-<!--                        <td th:text="${order.dateOrder}" class="pt-1 pb-1"></td>-->
-<!--                        <td th:text="${order.trackingNumber}" class="pt-1 pb-1"></td>-->
-<!--                        <td th:text="${#numbers.formatDecimal(order.shippingCost,1,2)} + 'zł'"class="pt-1 pb-1" style="text-align: right"></td>-->
-<!--                        <td class="pt-1 pb-1">-->
+                        <td th:text="${orderItem.countries.countryEn}"></td>
+                        <td th:if="${orderItem.pattern} == 'NOTE'">
+                            <span th:text="${orderItem.notes.denomination}"></span>
+                            <span th:text="${orderItem.notes.nameCurrency}"></span>
+                        </td>
+                        <td th:text="${orderItem.pattern}" class="pt-1 pb-1"></td>
+                        <td th:text="${orderItem.quantity} + ${orderItem.unitQuantity}" class="pt-1 pb-1"></td>
+                        <td th:text="${orderItem.finalPrice}" class="pt-1 pb-1"></td>
+                        <td th:text="${#numbers.formatDecimal(orderItem.quantity * orderItem.finalPrice,1,2)} " class="pt-1 pb-1"></td>
+                        <td class="pt-1 pb-1">
 <!--                            <a th:href="@{'/order/show/' + ${order.id}}" class="btn btn-sm btn-info" style="font-size: 10px" data-toggle="modal" th:attr="data-target='#order-' + ${order.id}" >SHOW</a>-->
 <!--                            <div class="modal fade" th:attr="id= 'order-' + ${order.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
 <!--                                <div th:replace="order/_showModal :: showModal"></div>-->
@@ -51,8 +57,8 @@
 <!--                                <a th:href="@{'/order/delete/' + ${order.id}}" class="btn btn-sm btn-danger" style="font-size: 10px; float: right" data-toggle="modal" th:attr="data-target='#order' + ${order.id}" >Delete</a>-->
 <!--                            <div class="modal fade" th:attr="id= 'order' + ${order.id}"  tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">-->
 <!--                                <div th:replace="order/_confirmDeleteModal :: confirmDeleteModal"></div>-->
-<!--                            </div>-->
-<!--                        </td>-->
+                            </div>
+                        </td>
                     </tr>
                 </Block>
                 </tbody>
