--- a/src/main/resources/templates/orderItem/new.html
+++ b/src/main/resources/templates/orderItem/new.html
@@ -17,6 +17,11 @@
                     <input type="submit" value="Dodaj" class="btn btn-sm btn-primary" style="  float: left; margin-right: 5px">
     <!--                <a th:replace="fragments/button/_button-back :: back(back = '/order/' + ${orderForm.customers.uniqueId})"></a>-->
                 </div>
+                <div th:if="${orderItemForm.pattern} == 'COIN'">
+                    <div th:replace="orderItem/_formCoin :: form"></div>
+                    <input type="submit" value="Dodaj" class="btn btn-sm btn-primary" style="  float: left; margin-right: 5px">
+                    <!--                <a th:replace="fragments/button/_button-back :: back(back = '/order/' + ${orderForm.customers.uniqueId})"></a>-->
+                </div>
             </form>
             <div>
 <!--                <a th:replace="fragments/button/_button-back :: back(back = '/order/' + ${orderForm.customers.uniqueId})"></a>-->
