Dodano mozliwość dodawania papierów wartościowych (obligacje, Akcje) do zamówienia

--- a/src/main/resources/templates/orderItem/_formCoin.html
+++ b/src/main/resources/templates/orderItem/_formCoin.html
@@ -36,7 +36,7 @@
         <div class="form-row align-items-center">
             <div class="col-auto">
                 <label class="m-0">Country</label><br>
-                <b th:text="${orderItemForm.coins.currencies.countries.id} + ${orderItemForm.coins.currencies.countries.countryEn}" class="form-control form-control-sm mb-1" style="width: auto"></b>
+                <b th:text="${orderItemForm.coins.currencies.countries.countryEn}" class="form-control form-control-sm mb-1" style="width: auto"></b>
             </div>
             <div class="col-auto">
                 <label class="m-0">Currency</label><br>
