--- a/src/main/resources/templates/orderItem/_formSecurity.html
+++ b/src/main/resources/templates/orderItem/_formSecurity.html
@@ -17,7 +17,7 @@
     <div class="form-row align-items-center">
         <div class="col-auto">
             <label class="m-0">Id</label><br>
-            <input class="form-control form-control-sm mb-2" type="text" th:field="*{notes.id}" th:readonly="note.id"  placeholder="Pattern"  />
+            <input class="form-control form-control-sm mb-2" type="text" th:field="*{securities.id}" th:readonly="securities.id"  placeholder="Pattern"  />
         </div>
         <div class="col-auto">
             <label class="m-0">Pattern</label><br>
@@ -25,38 +25,37 @@
         </div>
         <div class="col-auto">
             <label class="m-0">Id country</label><br>
-            <input class="form-control form-control-sm mb-2" type="text" th:field="*{countries.id}" th:readonly="note.id"  placeholder="Country"  />
+            <input class="form-control form-control-sm mb-2" type="text" th:field="*{countries.id}" th:readonly="securities.id"  placeholder="Country"  />
         </div>
         <div class="col-auto">
             <label class="m-0">Country</label><br>
-            <b class="form-control form-control-sm mb-2" type="text" th:text="${orderItemForm.notes.currencies.countries.countryEn}" th:readonly="pattern"></b>
+            <b class="form-control form-control-sm mb-2" type="text" th:text="${orderItemForm.securities.currencies.countries.countryEn}" th:readonly="pattern"></b>
         </div>
     </div>
     <hr class="my-2">
         <div class="form-row align-items-center">
             <div class="col-auto">
                 <label class="m-0">Country</label><br>
-                <b th:text="${orderItemForm.notes.currencies.countries.countryEn}" class="form-control form-control-sm mb-1" style="width: auto"></b>
+                <b th:text="${orderItemForm.securities.currencies.countries.countryEn}" class="form-control form-control-sm mb-1" style="width: auto"></b>
             </div>
             <div class="col-auto">
                 <label class="m-0">Currency</label><br>
-                <b th:text="${orderItemForm.notes.denomination + orderItemForm.notes.nameCurrency}" class="form-control form-control-sm mb-1" style="width: auto"></b>
+                <b th:text="${orderItemForm.securities.denomination + orderItemForm.securities.nameCurrency}" class="form-control form-control-sm mb-1" style="width: auto"></b>
             </div>
             <div class="col-auto">
-<!--            <b th:text="${orderItemForm.notes.nameCurrency}" class="form-control form-control-sm mb-1" style="width: auto"></b>-->
                 <label class="m-0">Date</label><br>
-                <b th:text="${orderItemForm.notes.itemDate}" class="form-control form-control-sm mb-1" style="width: auto"></b>
+                <b th:text="${orderItemForm.securities.itemDate}" class="form-control form-control-sm mb-1" style="width: auto"></b>
             </div>
         </div>
     <hr class="my-2">
     <div class="form-row align-items-center">
         <div class="col-md-1">
             <label class="m-0">Availabla</label><br>
-            <b th:text="${orderItemForm.notes.quantity + orderItemForm.notes.unitQuantity }" class="form-control form-control-sm mb-2" type="text"  readonly></b>
+            <b th:text="${orderItemForm.securities.quantity + orderItemForm.securities.unitQuantity }" class="form-control form-control-sm mb-2" type="text"  readonly></b>
         </div>
         <div class="col-md-1">
             <label class="m-0">Quantity</label><br>
-            <input class="form-control form-control-sm mb-2" type="number" th:field="*{quantity}" min="1" th:max="${orderItemForm.notes.quantity}" placeholder="quantity"/>
+            <input class="form-control form-control-sm mb-2" type="number" th:field="*{quantity}" min="1" th:max="${orderItemForm.securities.quantity}" placeholder="quantity"/>
             <div th:if="${#fields.hasErrors('quantity')}" class="alert alert-danger alert-sm" role="alert" style="padding: 0px 10px 0px 10px" >
                 <span th:errors="*{quantity}" ></span>
             </div>
@@ -70,7 +69,7 @@
     <div class="form-row align-items-center">
         <div class="col-md-2">
             <label class="m-0">Price</label><br>
-            <b th:text="${orderItemForm.notes.priceSell}" class="form-control form-control-sm mb-2" type="text"  readonly></b>
+            <b th:text="${orderItemForm.securities.priceSell}" class="form-control form-control-sm mb-2" type="text"  readonly></b>
         </div>
         <div class="col-md-2">
             <label class="m-0">Final Price</label>
@@ -84,10 +83,10 @@
     <div class="form-row align-items-center">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3">
             <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
-                <img th:src="${orderItemForm.notes.aversPath}" style="max-width: 100%; max-height: 350px"/>
+                <img th:src="${orderItemForm.securities.aversPath}" style="max-width: 100%; max-height: 350px"/>
             </div>
             <div class="col field" style="float: left; padding: 10px 10px 10px 10px">
-                <img th:src="${orderItemForm.notes.reversePath}" style="max-width: 100%; max-height: 350px"/>
+                <img th:src="${orderItemForm.securities.reversePath}" style="max-width: 100%; max-height: 350px"/>
             </div>
 
             <div class="container col field" style="padding: 10px 10px 10px 10px">
